# husky-kylin

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  parse_json.cpp  test-table.cpp  test.json
cmake/: FindArrow.cmake  FindGTest.cmake  FindORC.cmake  dep.cmake
core-cube/: CMakeLists.txt  CubeInstance.cpp  CubeInstance.hpp  base_encoder.hpp  row_key.hpp  string_encoder.hpp  table.hpp
core-cube/cuboid/: Cuboid.cpp  Cuboid.hpp  CuboidScheduler.cpp  CuboidScheduler.hpp
core-cube/model/: AggregationGroup.hpp  CubeDesc.cpp  CubeDesc.hpp  DimensionDesc.cpp  DimensionDesc.hpp  RowKeyColDesc.cpp  RowKeyColDesc.hpp  RowKeyDesc.hpp  cube_desc.json
core-metadata/: CMakeLists.txt
core-metadata/dimension/: DimensionDimEnc.hpp  IntegerDimEnc.cpp  IntegerDimEnc.hpp
core-metadata/metadata/datatype/: DataType.cpp  DataType.hpp
core-metadata/metadata/model/: CMakeLists.txt  ColumnDesc.cpp  ColumnDesc.hpp  DataModelDesc.cpp  DataModelDesc.hpp  FunctionDesc.cpp  FunctionDesc.hpp  Makefile  MeasureDesc.cpp  MeasureDesc.hpp  ModelDimensionDesc.cpp  ModelDimensionDesc.hpp  ParameterDesc.cpp  ParameterDesc.hpp  TableDesc.cpp  TableDesc.hpp  TableDesc_test.cpp  TableRef.cpp  TableRef.hpp  TblColRef.cpp  TblColRef.hpp  table.json  testModel.cpp
examples/: CMakeLists.txt  cubing_by_layer.cpp  parse_json.cpp  test_table.cpp  wc_cal_orc.cpp  wc_mr_parquet.cpp  wc_orc.cpp
husky-orc/: CMakeLists.txt
husky-orc/core/: constants.hpp
husky-orc/io/input/: orc_file_splitter.cpp  orc_inputformat.cpp  orc_inputformat.hpp
husky-orc/master/: orc_assigner.cpp
husky-plugins/: CMakeLists.txt
husky-plugins/io/input/: orc_file_splitter.cpp  orc_file_splitter.hpp  orc_inputformat.cpp  orc_inputformat.hpp  parquet_assigner.cpp  parquet_file_splitter.cpp  parquet_file_splitter.hpp  parquet_inputformat.cpp  parquet_inputformat.hpp
husky-plugins/master/: orc_assigner.cpp  orc_assigner.hpp  parquet_assigner.cpp  parquet_assigner.hpp
scripts/: clang-format.py  lint.py
src/: cubingByLayer.cpp
src/algorithm/: CMakeLists.txt  base_cuboid_encoder.hpp  cubing_by_layer.cpp  cubing_by_layer.hpp  cuboid_combiner.cpp  cuboid_combiner.hpp  cuboid_kv.hpp  nd_cuboid_builder.hpp
src/core-cube/: CMakeLists.txt  cube_instance.cpp  cube_instance.hpp
src/core-cube/cuboid/: cuboid.cpp  cuboid.hpp  cuboid_scheduler.cpp  cuboid_scheduler.hpp  cuboid_scheduler_base.cpp  cuboid_scheduler_base.hpp  tree_cuboid_scheduler.cpp  tree_cuboid_scheduler.hpp  tree_cuboid_scheduler_test.cpp
src/core-cube/kv/: abstract_row_key_encoder.hpp  row_key_constants.hpp  row_key_encoder.cpp  row_key_encoder.hpp  row_key_splitter.hpp
src/core-cube/model/: aggregation_group.cpp  aggregation_group.hpp  cube_desc.cpp  cube_desc.hpp  dimension_desc.cpp  dimension_desc.hpp  row_key_col_desc.cpp  row_key_col_desc.hpp  row_key_desc.cpp  row_key_desc.hpp
src/core-metadata/: CMakeLists.txt  meta_loader.hpp
src/core-metadata/dimension/: date_dim_enc.cpp  date_dim_enc.hpp  dimension_dim_enc.hpp  dimension_encoding.hpp  integer_dim_enc.cpp  integer_dim_enc.hpp
src/core-metadata/measure/: measure_aggregators.hpp  measure_type.hpp  measure_type_factory.hpp
src/core-metadata/measure/basic/: basic_measure_type.hpp  sum_aggregators.hpp
src/core-metadata/metadata/datatype/: data_type.cpp  data_type.hpp
src/core-metadata/metadata/model/: column_desc.cpp  column_desc.hpp  constants.hpp  data_model_desc.cpp  data_model_desc.hpp  function_desc.cpp  function_desc.hpp  measure_desc.cpp  measure_desc.hpp  model_dimension_desc.cpp  model_dimension_desc.hpp  parameter_desc.cpp  parameter_desc.hpp  table_desc.cpp  table_desc.hpp  table_desc_test.cpp  table_ref.cpp  table_ref.hpp  tbl_col_ref.cpp  tbl_col_ref.hpp
src/husky-plugins/: CMakeLists.txt
src/husky-plugins/core/: constants.hpp
src/husky-plugins/io/input/: file_broadcast_inputformat.cpp  file_broadcast_inputformat.hpp  orc_file_splitter.cpp  orc_file_splitter.hpp  orc_hdfs_inputstream.hpp  orc_inputformat.cpp  orc_inputformat.hpp  parquet_file_splitter.cpp  parquet_file_splitter.hpp  parquet_hdfs_source.hpp  parquet_inputformat.cpp  parquet_inputformat.hpp
src/husky-plugins/master/: orc_assigner.cpp  orc_assigner.hpp  parquet_assigner.cpp  parquet_assigner.hpp
src/table/: abstract_table_reader.hpp  orc_table_reader.hpp  table.hpp  table_reader_factory.hpp  text_table_reader.hpp
src/utils/: CMakeLists.txt  hash.hpp  print_string.hpp  utils.cpp  utils.hpp  utils_test.cpp
test/: CMakeLists.txt  test_cube.cpp  test_model.cpp  test_table_reader.cpp  unittest_main.cpp
test/resources/: cube_desc.json  model.json
utils/: utils.hpp
