include_directories(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/husky)

# files that can be added to the list below
# CubeInstance.cpp
# model/CubeDesc.cpp
# model/RowKeyColDesc.cpp
# model/DimensionDesc.cpp
# cuboid/CuboidScheduler.cpp
# cuboid/Cuboid.cpp

# file(GLOB core-cube-src)
# 
# add_library(core-cube STATIC ${core-cube-src})
